refactor: restructure project for PyPI packaging
- Added `pyproject.toml` for project metadata and dependency management
- Moved application code to `src/wikimore` directory for better organization
- Updated `launch.json` configuration for Flask app
- Enhanced README with installation, development instructions, and badges
- Introduced `main` function in `app.py` for environment-based configuration

These changes streamline packaging and improve project maintainability.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,10 +10,11 @@
             "request": "launch",
             "module": "flask",
             "env": {
-                "FLASK_APP": "app.py",
                 "FLASK_DEBUG": "1",
             },
             "args": [
+                "--app",
+                "wikimore",
                 "run",
                 "--no-debugger",
                 "--no-reload",
